--- a/HomeWork6/5,6,7.html
+++ b/HomeWork6/5,6,7.html
@@ -54,7 +54,7 @@
 		            <div id="myDiv">
                         <p>First paragraph</p>           
                     </div>
-            </main>`;
+            </main>`; */
 
         </script>
     </body>
